# TwitterGPT

./: README.md  [demo]twitter_api_check.py  db.sqlite3  pyproject.toml  twitter_api.py
WebApp/: settings.py  urls.py  views.py
static/css/: style.css
templates/: index.html
twitter/: adcock_brett.jsonl  elonmusk.jsonl  elonmusk_test_prepared.jsonl  elonmusk_train_prepared.jsonl  filter_tweets.py  openai_con.py  random_shuffle.py  store_tweet.py  test.py  twitter.py  twitter_api.py
