[tool.poetry]
name = "twittergpt"
version = "0.1.0"
description = ""
authors = ["Farhan Ishraq <omifarhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
tweepy = "^4.13.0"
python-dotenv = "^1.0.0"
openai = "^0.27.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
